--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 docs/site/
 
-
 # test cache
 manual_test/
 
@@ -176,3 +175,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/data
